// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Snapshot Tests matches snapshot with checked state for checkbox 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-row"
      >
        <p
          class="text-sm font-bold text-neutral11"
        />
      </div>
      <div
        class="flex items-center gap-2 py-1"
      >
        <input
          checked=""
          class="size-4"
          type="checkbox"
        />
        <div
          class="flex flex-row"
        >
          <p
            class="text-sm text-neutral11 font-normal"
          >
            Label
          </p>
        </div>
      </div>
    </div>
    <textarea
      class="min-w-[360px] px-4 h-[100px] py-3.5 border rounded-md hover:outline-none focus:border-blue6 focus:outline-none placeholder:text-neutral6 border-[#D9D9D9] bg-white hover:border-blue6 w-[360px]"
      maxlength="200"
      placeholder=""
    />
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <span
          class="text-xs text-neutral7 opacity-0"
        />
      </div>
      <span
        class="text-xs text-neutral7"
      >
        0/200
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshot Tests matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-row"
      >
        <p
          class="text-sm font-bold text-neutral11"
        />
      </div>
    </div>
    <textarea
      class="min-w-[360px] px-4 h-[100px] py-3.5 border rounded-md hover:outline-none focus:border-blue6 focus:outline-none placeholder:text-neutral6 border-[#D9D9D9] bg-white hover:border-blue6 w-[360px]"
      maxlength="200"
      placeholder="Enter text here"
    />
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <span
          class="text-xs text-neutral7 opacity-0"
        />
      </div>
      <span
        class="text-xs text-neutral7"
      >
        0/200
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshot Tests matches snapshot with disabled state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-row"
      >
        <p
          class="text-sm font-bold text-neutral11"
        />
      </div>
    </div>
    <textarea
      class="min-w-[360px] px-4 h-[100px] py-3.5 border rounded-md hover:outline-none focus:border-blue6 focus:outline-none border-[#D9D9D9] bg-neutral4 !border-neutral6 text-neutral7 cursor-not-allowed w-[360px] placeholder:text-neutral7"
      disabled=""
      maxlength="200"
      placeholder=""
    />
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <span
          class="text-xs text-neutral7 opacity-0"
        />
      </div>
      <span
        class="text-xs text-neutral7"
      >
        0/200
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshot Tests matches snapshot with error state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-row"
      >
        <p
          class="text-sm font-bold text-neutral11"
        />
      </div>
    </div>
    <textarea
      class="min-w-[360px] px-4 h-[100px] py-3.5 border rounded-md hover:outline-none focus:border-blue6 focus:outline-none placeholder:text-neutral6 !border-error5 bg-white hover:border-blue6 w-[360px]"
      maxlength="200"
      placeholder=""
    />
    <div
      class="relative"
    >
      <div
        class="absolute right-4 top-[-40px]"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.99984 5.83317C10.4582 5.83317 10.8332 6.20817 10.8332 6.6665V9.99984C10.8332 10.4582 10.4582 10.8332 9.99984 10.8332C9.5415 10.8332 9.1665 10.4582 9.1665 9.99984V6.6665C9.1665 6.20817 9.5415 5.83317 9.99984 5.83317ZM9.9915 1.6665C5.3915 1.6665 1.6665 5.39984 1.6665 9.99984C1.6665 14.5998 5.3915 18.3332 9.9915 18.3332C14.5998 18.3332 18.3332 14.5998 18.3332 9.99984C18.3332 5.39984 14.5998 1.6665 9.9915 1.6665ZM9.99984 16.6665C6.3165 16.6665 3.33317 13.6832 3.33317 9.99984C3.33317 6.3165 6.3165 3.33317 9.99984 3.33317C13.6832 3.33317 16.6665 6.3165 16.6665 9.99984C16.6665 13.6832 13.6832 16.6665 9.99984 16.6665ZM10.8332 14.1665H9.1665V12.4998H10.8332V14.1665Z"
            fill="#F0454B"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <span
          class="text-xs text-error5 opacity-0"
        />
      </div>
      <span
        class="text-xs text-neutral7"
      >
        0/200
      </span>
    </div>
  </div>
</DocumentFragment>
`;
